Rename Transfert -> Transfer everywhere + lots of front stuff

--- a/backend/tsosi/data/preparation/pci/run.ipynb
+++ b/backend/tsosi/data/preparation/pci/run.ipynb
@@ -1,223 +1,223 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1 - Pre-process raw data\n",
-    "\n",
-    "Map the identifiers data with the emitters in the transfert list.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Identifiers manually added:\n",
-    "\n",
-    "- Library of the University of Ottawa -> Q57942111\n",
-    "- Société Française d'Écologie et d'Évolution (SFE²) -> Q3488296\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pathlib import Path\n",
-    "import pandas as pd\n",
-    "import os\n",
-    "import sys\n",
-    "import django\n",
-    "from IPython.display import display\n",
-    "\n",
-    "# Add the parent directory to the system path and setup django\n",
-    "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent.parent.parent)\n",
-    "\n",
-    "if BASE_DIR not in sys.path:\n",
-    "    sys.path.append(BASE_DIR)\n",
-    "\n",
-    "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
-    "\n",
-    "django.setup()\n",
-    "\n",
-    "from tsosi.data.preparation.cleaning_utils import clean_cell_value\n",
-    "\n",
-    "date_str = \"2025-03-03\"\n",
-    "raw_folder = Path.home() / \"Nextcloud/TSOSI_data/pci/0_raw\"\n",
-    "raw_file = f\"{date_str}_PCI_Funding_Report.xlsx\"\n",
-    "raw_path = str(raw_folder / raw_file)\n",
-    "\n",
-    "id_file = \"2025-01-06_PCI_Funding_Data_Identifiers.xlsx\"\n",
-    "id_path = str(raw_folder / id_file)\n",
-    "emitters_sheet = \"Emitters\"\n",
-    "consortiums_sheet = \"Consortiums\"\n",
-    "\n",
-    "\n",
-    "data = pd.read_excel(raw_path)\n",
-    "ids_emitters = pd.read_excel(id_path, emitters_sheet)\n",
-    "ids_consortiums = pd.read_excel(id_path, consortiums_sheet)\n",
-    "\n",
-    "\n",
-    "data = data.map(clean_cell_value)\n",
-    "ids_emitters = ids_emitters.map(clean_cell_value)\n",
-    "ids_consortiums = ids_consortiums.map(clean_cell_value)\n",
-    "\n",
-    "## Map emitters to the transferts df\n",
-    "data[\"_emitter\"] = data[\"From organization\"].str.lower()\n",
-    "emitters_cols = {\n",
-    "    \"Institution/origine du soutien\": \"emitter_name\",\n",
-    "    \"ROR\": \"emitter_ror_id\",\n",
-    "    \"wikidata\": \"emitter_wikidata_id\",\n",
-    "    \"Country\": \"emitter_country\",\n",
-    "}\n",
-    "ids_emitters = ids_emitters.rename(columns=emitters_cols)[\n",
-    "    emitters_cols.values()\n",
-    "].copy()\n",
-    "ids_emitters[\"_emitter\"] = ids_emitters[\"emitter_name\"].str.lower()\n",
-    "\n",
-    "ids_emitters = ids_emitters.drop_duplicates()\n",
-    "duplicates = ids_emitters[ids_emitters.duplicated(subset=\"_emitter\")]\n",
-    "if not duplicates.empty:\n",
-    "    print(\"WARNING: The following emitters appear twice in the spreadsheet\")\n",
-    "    display(duplicates)\n",
-    "    raise Exception(\"CF output.\")\n",
-    "ids_emitters.drop(columns=[\"emitter_name\"], inplace=True)\n",
-    "ids_emitters[\"_test\"] = 1\n",
-    "\n",
-    "data = data.merge(ids_emitters, on=\"_emitter\", how=\"left\")\n",
-    "\n",
-    "# Check unmatched emitters (there might be missing inputs in PCI matching spreadsheet)\n",
-    "# data[data[\"_test\"] != 1]\n",
-    "\n",
-    "# Check data with no identifier\n",
-    "mask = (\n",
-    "    data[\"emitter_ror_id\"].isna()\n",
-    "    & data[\"emitter_wikidata_id\"].isna()\n",
-    "    & data[\"_test\"]\n",
-    "    == 1\n",
-    ")\n",
-    "data[mask]\n",
-    "\n",
-    "data.drop(columns=[\"_emitter\", \"_test\"], inplace=True)\n",
-    "\n",
-    "\n",
-    "## Map consortiums to the transferts df\n",
-    "data[\"_agent\"] = data[\"Via?\"].str.lower()\n",
-    "agent_cols = {\n",
-    "    \"Consortia\": \"agent_name\",\n",
-    "    \"ROR\": \"agent_ror_id\",\n",
-    "    \"wikidata\": \"agent_wikidata_id\",\n",
-    "    \"Website\": \"agent_website\",\n",
-    "}\n",
-    "\n",
-    "ids_consortiums = ids_consortiums.rename(columns=agent_cols)[\n",
-    "    agent_cols.values()\n",
-    "].copy()\n",
-    "ids_consortiums[\"_agent\"] = ids_consortiums[\"agent_name\"].str.lower()\n",
-    "ids_consortiums = ids_consortiums.drop_duplicates()\n",
-    "duplicates = ids_consortiums[ids_consortiums.duplicated(subset=\"_agent\")]\n",
-    "if not duplicates.empty:\n",
-    "    print(\"WARNING: The following emitters appear twice in the spreadsheet\")\n",
-    "    display(duplicates)\n",
-    "    raise Exception(\"CF output.\")\n",
-    "ids_consortiums.drop(columns=[\"agent_name\"], inplace=True)\n",
-    "ids_consortiums[\"_test\"] = 1\n",
-    "\n",
-    "data = data.merge(ids_consortiums, on=\"_agent\", how=\"left\")\n",
-    "\n",
-    "# Check consortium data is okay\n",
-    "mask = ~data[\"_agent\"].isna() & (data[\"_test\"] != 1)\n",
-    "data[mask]\n",
-    "\n",
-    "data.drop(columns=[\"_agent\", \"_test\"], inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prepared_folder = Path.home() / \"Nextcloud/TSOSI_data/pci/4_prepared/\"\n",
-    "prepared_file = f\"{date_str}_PCI_Funding_Report_prepared.xlsx\"\n",
-    "prepared_path = str(prepared_folder / prepared_file)\n",
-    "data.to_excel(prepared_path, index=False, sheet_name=\"Transferts\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 5 - Generate TSOSI data file\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
+  "cells": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO raw_data_config - Preparing data with config `pci`.\n",
-      "INFO raw_data_config - Successfully prepared the data for config pci\n",
-      "INFO raw_data_config - Successfully write TSOSI data file at /home/guillaume-alzieu/Nextcloud/TSOSI_data/_exports/2025-03-06_pci_full.json\n"
-     ]
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 1 - Pre-process raw data\n",
+        "\n",
+        "Map the identifiers data with the emitters in the transfer list.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Identifiers manually added:\n",
+        "\n",
+        "- Library of the University of Ottawa -> Q57942111\n",
+        "- Société Française d'Écologie et d'Évolution (SFE²) -> Q3488296\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from pathlib import Path\n",
+        "import pandas as pd\n",
+        "import os\n",
+        "import sys\n",
+        "import django\n",
+        "from IPython.display import display\n",
+        "\n",
+        "# Add the parent directory to the system path and setup django\n",
+        "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent.parent.parent)\n",
+        "\n",
+        "if BASE_DIR not in sys.path:\n",
+        "    sys.path.append(BASE_DIR)\n",
+        "\n",
+        "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
+        "\n",
+        "django.setup()\n",
+        "\n",
+        "from tsosi.data.preparation.cleaning_utils import clean_cell_value\n",
+        "\n",
+        "date_str = \"2025-03-03\"\n",
+        "raw_folder = Path.home() / \"Nextcloud/TSOSI_data/pci/0_raw\"\n",
+        "raw_file = f\"{date_str}_PCI_Funding_Report.xlsx\"\n",
+        "raw_path = str(raw_folder / raw_file)\n",
+        "\n",
+        "id_file = \"2025-01-06_PCI_Funding_Data_Identifiers.xlsx\"\n",
+        "id_path = str(raw_folder / id_file)\n",
+        "emitters_sheet = \"Emitters\"\n",
+        "consortiums_sheet = \"Consortiums\"\n",
+        "\n",
+        "\n",
+        "data = pd.read_excel(raw_path)\n",
+        "ids_emitters = pd.read_excel(id_path, emitters_sheet)\n",
+        "ids_consortiums = pd.read_excel(id_path, consortiums_sheet)\n",
+        "\n",
+        "\n",
+        "data = data.map(clean_cell_value)\n",
+        "ids_emitters = ids_emitters.map(clean_cell_value)\n",
+        "ids_consortiums = ids_consortiums.map(clean_cell_value)\n",
+        "\n",
+        "## Map emitters to the transfers df\n",
+        "data[\"_emitter\"] = data[\"From organization\"].str.lower()\n",
+        "emitters_cols = {\n",
+        "    \"Institution/origine du soutien\": \"emitter_name\",\n",
+        "    \"ROR\": \"emitter_ror_id\",\n",
+        "    \"wikidata\": \"emitter_wikidata_id\",\n",
+        "    \"Country\": \"emitter_country\",\n",
+        "}\n",
+        "ids_emitters = ids_emitters.rename(columns=emitters_cols)[\n",
+        "    emitters_cols.values()\n",
+        "].copy()\n",
+        "ids_emitters[\"_emitter\"] = ids_emitters[\"emitter_name\"].str.lower()\n",
+        "\n",
+        "ids_emitters = ids_emitters.drop_duplicates()\n",
+        "duplicates = ids_emitters[ids_emitters.duplicated(subset=\"_emitter\")]\n",
+        "if not duplicates.empty:\n",
+        "    print(\"WARNING: The following emitters appear twice in the spreadsheet\")\n",
+        "    display(duplicates)\n",
+        "    raise Exception(\"CF output.\")\n",
+        "ids_emitters.drop(columns=[\"emitter_name\"], inplace=True)\n",
+        "ids_emitters[\"_test\"] = 1\n",
+        "\n",
+        "data = data.merge(ids_emitters, on=\"_emitter\", how=\"left\")\n",
+        "\n",
+        "# Check unmatched emitters (there might be missing inputs in PCI matching spreadsheet)\n",
+        "# data[data[\"_test\"] != 1]\n",
+        "\n",
+        "# Check data with no identifier\n",
+        "mask = (\n",
+        "    data[\"emitter_ror_id\"].isna()\n",
+        "    & data[\"emitter_wikidata_id\"].isna()\n",
+        "    & data[\"_test\"]\n",
+        "    == 1\n",
+        ")\n",
+        "data[mask]\n",
+        "\n",
+        "data.drop(columns=[\"_emitter\", \"_test\"], inplace=True)\n",
+        "\n",
+        "\n",
+        "## Map consortiums to the transfers df\n",
+        "data[\"_agent\"] = data[\"Via?\"].str.lower()\n",
+        "agent_cols = {\n",
+        "    \"Consortia\": \"agent_name\",\n",
+        "    \"ROR\": \"agent_ror_id\",\n",
+        "    \"wikidata\": \"agent_wikidata_id\",\n",
+        "    \"Website\": \"agent_website\",\n",
+        "}\n",
+        "\n",
+        "ids_consortiums = ids_consortiums.rename(columns=agent_cols)[\n",
+        "    agent_cols.values()\n",
+        "].copy()\n",
+        "ids_consortiums[\"_agent\"] = ids_consortiums[\"agent_name\"].str.lower()\n",
+        "ids_consortiums = ids_consortiums.drop_duplicates()\n",
+        "duplicates = ids_consortiums[ids_consortiums.duplicated(subset=\"_agent\")]\n",
+        "if not duplicates.empty:\n",
+        "    print(\"WARNING: The following emitters appear twice in the spreadsheet\")\n",
+        "    display(duplicates)\n",
+        "    raise Exception(\"CF output.\")\n",
+        "ids_consortiums.drop(columns=[\"agent_name\"], inplace=True)\n",
+        "ids_consortiums[\"_test\"] = 1\n",
+        "\n",
+        "data = data.merge(ids_consortiums, on=\"_agent\", how=\"left\")\n",
+        "\n",
+        "# Check consortium data is okay\n",
+        "mask = ~data[\"_agent\"].isna() & (data[\"_test\"] != 1)\n",
+        "data[mask]\n",
+        "\n",
+        "data.drop(columns=[\"_agent\", \"_test\"], inplace=True)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "prepared_folder = Path.home() / \"Nextcloud/TSOSI_data/pci/4_prepared/\"\n",
+        "prepared_file = f\"{date_str}_PCI_Funding_Report_prepared.xlsx\"\n",
+        "prepared_path = str(prepared_folder / prepared_file)\n",
+        "data.to_excel(prepared_path, index=False, sheet_name=\"Transfers\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 5 - Generate TSOSI data file\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "INFO raw_data_config - Preparing data with config `pci`.\n",
+            "INFO raw_data_config - Successfully prepared the data for config pci\n",
+            "INFO raw_data_config - Successfully write TSOSI data file at /home/guillaume-alzieu/Nextcloud/TSOSI_data/_exports/2025-03-06_pci_full.json\n"
+          ]
+        }
+      ],
+      "source": [
+        "from pathlib import Path\n",
+        "import sys\n",
+        "import os\n",
+        "import django\n",
+        "from datetime import date\n",
+        "\n",
+        "# Add the parent directory to the system path and setup django\n",
+        "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent.parent.parent)\n",
+        "\n",
+        "if BASE_DIR not in sys.path:\n",
+        "    sys.path.append(BASE_DIR)\n",
+        "\n",
+        "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
+        "\n",
+        "django.setup()\n",
+        "\n",
+        "from tsosi.data.preparation.pci.default import get_config\n",
+        "\n",
+        "date_data = date(2025, 3, 3)\n",
+        "\n",
+        "file_folder = Path.home() / \"Nextcloud/TSOSI_data/pci/4_prepared\"\n",
+        "file_name = \"2025-03-03_PCI_Funding_Report_prepared.xlsx\"\n",
+        "file_path = str(file_folder / file_name)\n",
+        "sheet_name = \"Transfers\"\n",
+        "\n",
+        "config = get_config(file_path, sheet_name, date_data)\n",
+        "config.generate_data_file()"
+      ]
     }
-   ],
-   "source": [
-    "from pathlib import Path\n",
-    "import sys\n",
-    "import os\n",
-    "import django\n",
-    "from datetime import date\n",
-    "\n",
-    "# Add the parent directory to the system path and setup django\n",
-    "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent.parent.parent)\n",
-    "\n",
-    "if BASE_DIR not in sys.path:\n",
-    "    sys.path.append(BASE_DIR)\n",
-    "\n",
-    "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
-    "\n",
-    "django.setup()\n",
-    "\n",
-    "from tsosi.data.preparation.pci.default import get_config\n",
-    "\n",
-    "date_data = date(2025, 3, 3)\n",
-    "\n",
-    "file_folder = Path.home() / \"Nextcloud/TSOSI_data/pci/4_prepared\"\n",
-    "file_name = \"2025-03-03_PCI_Funding_Report_prepared.xlsx\"\n",
-    "file_path = str(file_folder / file_name)\n",
-    "sheet_name = \"Transferts\"\n",
-    "\n",
-    "config = get_config(file_path, sheet_name, date_data)\n",
-    "config.generate_data_file()"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": ".venv",
-   "language": "python",
-   "name": "python3"
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": ".venv",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.3"
+    }
   },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.3"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2
+  "nbformat": 4,
+  "nbformat_minor": 2
 }
