--- a/backend/tsosi/data/preparation/operas/run.ipynb
+++ b/backend/tsosi/data/preparation/operas/run.ipynb
@@ -1,67 +1,67 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 5 - Generate TSOSI data file\n"
-   ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 5 - Generate TSOSI data file\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from pathlib import Path\n",
+        "import sys\n",
+        "import os\n",
+        "import django\n",
+        "from datetime import date\n",
+        "\n",
+        "# Add the parent directory to the system path and setup django\n",
+        "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent.parent.parent)\n",
+        "\n",
+        "if BASE_DIR not in sys.path:\n",
+        "    sys.path.append(BASE_DIR)\n",
+        "\n",
+        "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
+        "\n",
+        "django.setup()\n",
+        "\n",
+        "from tsosi.data.preparation.operas.default import get_config\n",
+        "\n",
+        "date_data = date(2024, 10, 16)\n",
+        "\n",
+        "file_folder = Path.home() / \"Nextcloud/TSOSI_data/operas/4_prepared\"\n",
+        "file_name = \"2024-10-16_OPERAS_2023_curated_enriched.xlsx\"\n",
+        "file_path = str(file_folder / file_name)\n",
+        "sheet_name = \"Transfers\"\n",
+        "\n",
+        "config = get_config(file_path, sheet_name, 2023, date_data)\n",
+        "config.generate_data_file()"
+      ]
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": ".venv",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.3"
+    }
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pathlib import Path\n",
-    "import sys\n",
-    "import os\n",
-    "import django\n",
-    "from datetime import date\n",
-    "\n",
-    "# Add the parent directory to the system path and setup django\n",
-    "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent.parent.parent)\n",
-    "\n",
-    "if BASE_DIR not in sys.path:\n",
-    "    sys.path.append(BASE_DIR)\n",
-    "\n",
-    "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
-    "\n",
-    "django.setup()\n",
-    "\n",
-    "from tsosi.data.preparation.operas.default import get_config\n",
-    "\n",
-    "date_data = date(2024, 10, 16)\n",
-    "\n",
-    "file_folder = Path.home() / \"Nextcloud/TSOSI_data/operas/4_prepared\"\n",
-    "file_name = \"2024-10-16_OPERAS_2023_curated_enriched.xlsx\"\n",
-    "file_path = str(file_folder / file_name)\n",
-    "sheet_name = \"Transferts\"\n",
-    "\n",
-    "config = get_config(file_path, sheet_name, 2023, date_data)\n",
-    "config.generate_data_file()"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": ".venv",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.3"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2
+  "nbformat": 4,
+  "nbformat_minor": 2
 }
