Add popup on app startup - Review header layout

--- a/backend/tsosi/data/preparation/doaj/playground.ipynb
+++ b/backend/tsosi/data/preparation/doaj/playground.ipynb
@@ -163,9 +163,9 @@
         "\n",
         "df[\"_invoice_date\"] = pd.to_datetime(df[\"Invoice date\"], errors=\"coerce\")\n",
         "\n",
-        "date_bound = date(2023, 7, 1)\n",
+        "date_bound = date(2023, 12, 1)\n",
         "df[\"_date_before_bound\"] = df[\"_invoice_date\"].apply(\n",
-        "    lambda x: True if pd.isna(x) else x.date() < date_bound\n",
+        "    lambda x: (True if pd.isna(x) else x.date() < date_bound)\n",
         ")\n",
         "\n",
         "\n",
@@ -176,9 +176,10 @@
         ")\n",
         "columns = [c for c in df.columns if not c[0] == \"_\"]\n",
         "to_review = df[mask][columns]\n",
-        "to_review.to_excel(\n",
-        "    \"TSOSI_DOAJ_Library_2024_Invoice_data_review.xlsx\", index=False\n",
-        ")"
+        "# to_review.to_excel(\n",
+        "#     \"TSOSI_DOAJ_Library_2024_Invoice_data_review.xlsx\", index=False\n",
+        "# )\n",
+        "to_review"
       ]
     },
     {
