Rework scipost data preparation workflow

--- a/backend/tsosi/data/preparation/scipost/run.ipynb
+++ b/backend/tsosi/data/preparation/scipost/run.ipynb
@@ -43,10 +43,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "file = \"/home/guillaume-alzieu/Nextcloud/TSOSI_data/scipost/0_raw/2025-03-31_scipost_raw.json\"\n",
+    "df = pd.read_json(file)\n",
+    "mask = (~df[\"payment_date\"].isna()) & (df[\"status\"] != \"paid\")\n",
+    "df[mask]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4 - Process data\n"
+    "### 1 - Pre-process collected data\n"
    ]
   },
   {
@@ -75,19 +89,25 @@
     "from pathlib import Path\n",
     "import pandas as pd\n",
     "\n",
-    "date_str = \"2025-03-12\"\n",
+    "date_str = \"2025-03-31\"\n",
     "raw_file = f\"{date_str}_scipost_raw.json\"\n",
     "raw_folder = Path.home() / \"Nextcloud/TSOSI_data/scipost/0_raw\"\n",
     "raw_path = str(raw_folder / raw_file)\n",
     "\n",
-    "processed_file = f\"{date_str}_scipost_processed.json\"\n",
-    "processed_folder = Path.home() / \"Nextcloud/TSOSI_data/scipost/4_processed\"\n",
+    "processed_file = f\"{date_str}_scipost_pre_processed.json\"\n",
+    "processed_folder = Path.home() / \"Nextcloud/TSOSI_data/scipost/1_pre_processed\"\n",
     "processed_path = str(processed_folder / processed_file)\n",
     "\n",
     "df = pd.read_json(raw_path, orient=\"records\")\n",
     "\n",
     "data = pre_process_data(df)\n",
-    "data.to_json(processed_path, orient=\"records\", indent=2, index=False)"
+    "data.to_json(processed_path, orient=\"records\", indent=2, index=False)\n",
+    "\n",
+    "processed_file = processed_file.split(\".\")[0] + \".xlsx\"\n",
+    "\n",
+    "data.sort_values([\"emitter_ror_id\", \"emitter\"]).to_excel(\n",
+    "    str(processed_folder / processed_file), sheet_name=\"Transfers\", index=False\n",
+    ")"
    ]
   },
   {
@@ -103,6 +123,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import datetime\n",
+    "\n",
     "# Dates\n",
     "date_cols = [\"date_scheduled\", \"invoice_date\", \"payment_date\"]\n",
     "for c in date_cols:\n",
@@ -129,6 +151,13 @@
     "    (df[\"status\"] == \"scheduled\")\n",
     "    & (df[\"date_scheduled\"] < pd.to_datetime(date(2025, 3, 1)))\n",
     "]\n",
+    "\n",
+    "# Invoiced payment check\n",
+    "invoice_date_threshold = pd.to_datetime(datetime.date.today()) - pd.Timedelta(\n",
+    "    days=180\n",
+    ")\n",
+    "df[(df[\"status\"] == \"invoiced\") & (df[\"invoice_date\"] < invoice_date_threshold)]\n",
+    "\n",
     "\n",
     "# Missing date value\n",
     "df[\n",
@@ -171,12 +200,12 @@
     "\n",
     "from tsosi.data.preparation.scipost.default import get_config\n",
     "\n",
-    "date_data = date(2025, 3, 12)\n",
+    "date_data = date(2025, 3, 31)\n",
     "file_path = (\n",
     "    Path.home()\n",
-    "    / \"Nextcloud/TSOSI_data/scipost/4_processed/2025-03-12_scipost_processed.json\"\n",
+    "    / \"Nextcloud/TSOSI_data/scipost/4_processed/2025-03-31_scipost_processed.xlsx\"\n",
     ")\n",
-    "config = get_config(str(file_path), date_data)\n",
+    "config = get_config(str(file_path), \"Transfers\", date_data)\n",
     "config.generate_data_file()"
    ]
   }
