--- a/backend/tsosi/data/playground.ipynb
+++ b/backend/tsosi/data/playground.ipynb
@@ -1,308 +1,253 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Export TSOSI data file\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pathlib import Path\n",
-    "import sys\n",
-    "import os\n",
-    "import django\n",
-    "\n",
-    "# Add the parent directory to the system path and setup django\n",
-    "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent)\n",
-    "\n",
-    "if BASE_DIR not in sys.path:\n",
-    "    sys.path.append(BASE_DIR)\n",
-    "\n",
-    "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
-    "\n",
-    "django.setup()\n",
-    "\n",
-    "from tsosi.data.preparation.doaj.publishers_202X import (\n",
-    "    get_config as doaj_publisher_config,\n",
-    ")\n",
-    "from tsosi.data.preparation.doaj.libraries_2024_now import (\n",
-    "    get_config as doaj_library_2024_config,\n",
-    "    get_fixture_config as doaj_library_fixture_2024_config,\n",
-    ")\n",
-    "from tsosi.data.preparation.doaj.libraries_2023 import (\n",
-    "    get_config as doaj_library_2023_config,\n",
-    ")\n",
-    "from tsosi.data.preparation.doaj.libraries_2021_2022 import (\n",
-    "    get_config as doaj_library_2021_2022_config,\n",
-    ")\n",
-    "\n",
-    "year = 2024\n",
-    "file_path = (\n",
-    "    Path.home()\n",
-    "    / \"Nextcloud/TSOSI_data/doaj/4_prepared/2025-01-07-DOAJ_Publisher_Report_2024_prepared.xlsx\"\n",
-    ")\n",
-    "file_path = f\"{BASE_DIR}/tsosi/data/fixtures/doaj_example.json\"\n",
-    "sheet_name = \"Sheet1\"\n",
-    "config = doaj_library_fixture_2024_config(year, str(file_path))\n",
-    "config.get_data()\n",
-    "# config = doaj_library_2023_config(file_path, sheet_name)\n",
-    "config.generate_data_file()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### DEV\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pathlib import Path\n",
-    "import sys\n",
-    "import os\n",
-    "import django\n",
-    "import pandas as pd\n",
-    "from asgiref.sync import sync_to_async\n",
-    "\n",
-    "# Add the parent directory to the system path and setup django\n",
-    "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent)\n",
-    "\n",
-    "if BASE_DIR not in sys.path:\n",
-    "    sys.path.append(BASE_DIR)\n",
-    "\n",
-    "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
-    "\n",
-    "django.setup()\n",
-    "\n",
-    "from tsosi.models import Entity, Transfert\n",
-    "\n",
-    "\n",
-    "@sync_to_async\n",
-    "def run():\n",
-    "\n",
-    "    # data = Transfert.objects.filter(emitter__country__isnull=False).values(\n",
-    "    #     \"emitter__id\", \"emitter__country\"\n",
-    "    # )\n",
-    "    data = Entity.objects.filter(\n",
-    "        country__isnull=False, is_recipient=False\n",
-    "    ).values(\"id\", \"country\")\n",
-    "    df = pd.DataFrame.from_records(data)\n",
-    "\n",
-    "    return df\n",
-    "\n",
-    "\n",
-    "res = await run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
+  "cells": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>emitter__id</th>\n",
-       "      <th>emitter__country</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>000c71e1-ec1e-475d-97c2-7791e0a4f70c</td>\n",
-       "      <td>FR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>000c71e1-ec1e-475d-97c2-7791e0a4f70c</td>\n",
-       "      <td>FR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>000c71e1-ec1e-475d-97c2-7791e0a4f70c</td>\n",
-       "      <td>FR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>000c71e1-ec1e-475d-97c2-7791e0a4f70c</td>\n",
-       "      <td>FR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>000c71e1-ec1e-475d-97c2-7791e0a4f70c</td>\n",
-       "      <td>FR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2713</th>\n",
-       "      <td>ffae2bf9-de2d-44eb-858b-21557e527540</td>\n",
-       "      <td>CH</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2714</th>\n",
-       "      <td>ffae2bf9-de2d-44eb-858b-21557e527540</td>\n",
-       "      <td>CH</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2715</th>\n",
-       "      <td>ffae2bf9-de2d-44eb-858b-21557e527540</td>\n",
-       "      <td>CH</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2716</th>\n",
-       "      <td>ffae2bf9-de2d-44eb-858b-21557e527540</td>\n",
-       "      <td>CH</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2717</th>\n",
-       "      <td>fffc047e-ca1c-42b5-9c2c-a900531924d7</td>\n",
-       "      <td>FR</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2718 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                               emitter__id emitter__country\n",
-       "0     000c71e1-ec1e-475d-97c2-7791e0a4f70c               FR\n",
-       "1     000c71e1-ec1e-475d-97c2-7791e0a4f70c               FR\n",
-       "2     000c71e1-ec1e-475d-97c2-7791e0a4f70c               FR\n",
-       "3     000c71e1-ec1e-475d-97c2-7791e0a4f70c               FR\n",
-       "4     000c71e1-ec1e-475d-97c2-7791e0a4f70c               FR\n",
-       "...                                    ...              ...\n",
-       "2713  ffae2bf9-de2d-44eb-858b-21557e527540               CH\n",
-       "2714  ffae2bf9-de2d-44eb-858b-21557e527540               CH\n",
-       "2715  ffae2bf9-de2d-44eb-858b-21557e527540               CH\n",
-       "2716  ffae2bf9-de2d-44eb-858b-21557e527540               CH\n",
-       "2717  fffc047e-ca1c-42b5-9c2c-a900531924d7               FR\n",
-       "\n",
-       "[2718 rows x 2 columns]"
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### DEV\n"
       ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from pathlib import Path\n",
+        "import sys\n",
+        "import os\n",
+        "import django\n",
+        "import pandas as pd\n",
+        "from asgiref.sync import sync_to_async\n",
+        "\n",
+        "# Add the parent directory to the system path and setup django\n",
+        "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent)\n",
+        "\n",
+        "if BASE_DIR not in sys.path:\n",
+        "    sys.path.append(BASE_DIR)\n",
+        "\n",
+        "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
+        "\n",
+        "django.setup()\n",
+        "\n",
+        "from tsosi.models import Entity, Transfer\n",
+        "\n",
+        "\n",
+        "@sync_to_async\n",
+        "def run():\n",
+        "\n",
+        "    # data = Transfer.objects.filter(emitter__country__isnull=False).values(\n",
+        "    #     \"emitter__id\", \"emitter__country\"\n",
+        "    # )\n",
+        "    data = Entity.objects.filter(\n",
+        "        country__isnull=False, is_recipient=False\n",
+        "    ).values(\"id\", \"country\")\n",
+        "    df = pd.DataFrame.from_records(data)\n",
+        "\n",
+        "    return df\n",
+        "\n",
+        "\n",
+        "res = await run()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>emitter__id</th>\n",
+              "      <th>emitter__country</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>000c71e1-ec1e-475d-97c2-7791e0a4f70c</td>\n",
+              "      <td>FR</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>000c71e1-ec1e-475d-97c2-7791e0a4f70c</td>\n",
+              "      <td>FR</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>000c71e1-ec1e-475d-97c2-7791e0a4f70c</td>\n",
+              "      <td>FR</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>000c71e1-ec1e-475d-97c2-7791e0a4f70c</td>\n",
+              "      <td>FR</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>000c71e1-ec1e-475d-97c2-7791e0a4f70c</td>\n",
+              "      <td>FR</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2713</th>\n",
+              "      <td>ffae2bf9-de2d-44eb-858b-21557e527540</td>\n",
+              "      <td>CH</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2714</th>\n",
+              "      <td>ffae2bf9-de2d-44eb-858b-21557e527540</td>\n",
+              "      <td>CH</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2715</th>\n",
+              "      <td>ffae2bf9-de2d-44eb-858b-21557e527540</td>\n",
+              "      <td>CH</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2716</th>\n",
+              "      <td>ffae2bf9-de2d-44eb-858b-21557e527540</td>\n",
+              "      <td>CH</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2717</th>\n",
+              "      <td>fffc047e-ca1c-42b5-9c2c-a900531924d7</td>\n",
+              "      <td>FR</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>2718 rows × 2 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                               emitter__id emitter__country\n",
+              "0     000c71e1-ec1e-475d-97c2-7791e0a4f70c               FR\n",
+              "1     000c71e1-ec1e-475d-97c2-7791e0a4f70c               FR\n",
+              "2     000c71e1-ec1e-475d-97c2-7791e0a4f70c               FR\n",
+              "3     000c71e1-ec1e-475d-97c2-7791e0a4f70c               FR\n",
+              "4     000c71e1-ec1e-475d-97c2-7791e0a4f70c               FR\n",
+              "...                                    ...              ...\n",
+              "2713  ffae2bf9-de2d-44eb-858b-21557e527540               CH\n",
+              "2714  ffae2bf9-de2d-44eb-858b-21557e527540               CH\n",
+              "2715  ffae2bf9-de2d-44eb-858b-21557e527540               CH\n",
+              "2716  ffae2bf9-de2d-44eb-858b-21557e527540               CH\n",
+              "2717  fffc047e-ca1c-42b5-9c2c-a900531924d7               FR\n",
+              "\n",
+              "[2718 rows x 2 columns]"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "res"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from pycountry import countries\n",
+        "\n",
+        "d = (\n",
+        "    res.groupby(\"country\")\n",
+        "    .count()\n",
+        "    .reset_index()\n",
+        "    .sort_values(\"id\", ascending=False)\n",
+        ")\n",
+        "mapping = {c.alpha_2: c.name for c in countries}\n",
+        "d[\"country_name\"] = d[\"country\"].map(mapping)\n",
+        "d.rename(columns={\"country\": \"country_code\", \"id\": \"number\"}, inplace=True)\n",
+        "\n",
+        "\n",
+        "categories = [(50, \"Upper\"), (10, \"Medium\"), (0, \"Lower\")]\n",
+        "\n",
+        "for c_threshold, c_name in sorted(categories, key=lambda x: x[0]):\n",
+        "    mask = d[\"number\"] >= c_threshold\n",
+        "    d.loc[mask, \"category\"] = c_name\n",
+        "\n",
+        "d[[\"country_name\", \"country_code\", \"number\", \"category\"]].to_excel(\n",
+        "    \"supporters_extract.xlsx\", index=False\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "sorted(categories, key=lambda x: x[0])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from fontTools.ttLib.woff2 import compress\n",
+        "from pathlib import Path\n",
+        "import re\n",
+        "\n",
+        "font_directory = Path.home() / \"Documents/TSOSI/Graphisme/Mont/Mont\"\n",
+        "otf_files = font_directory.glob(\"*.otf\")\n",
+        "save_directory = Path.home() / \"Documents/TSOSI/Fonts/Mont\"\n",
+        "\n",
+        "for file in otf_files:\n",
+        "    file_path_usefull = re.match(r\".*(Mont[^\\.]+)\", file.name)\n",
+        "    save_path = (\n",
+        "        str(save_directory / file_path_usefull[1]).replace(\" \", \"_\") + \".woff2\"\n",
+        "    )\n",
+        "    compress(str(file), str(save_path))"
+      ]
     }
-   ],
-   "source": [
-    "res"
-   ]
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": ".venv",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.3"
+    }
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pycountry import countries\n",
-    "\n",
-    "d = (\n",
-    "    res.groupby(\"country\")\n",
-    "    .count()\n",
-    "    .reset_index()\n",
-    "    .sort_values(\"id\", ascending=False)\n",
-    ")\n",
-    "mapping = {c.alpha_2: c.name for c in countries}\n",
-    "d[\"country_name\"] = d[\"country\"].map(mapping)\n",
-    "d.rename(columns={\"country\": \"country_code\", \"id\": \"number\"}, inplace=True)\n",
-    "\n",
-    "\n",
-    "categories = [(50, \"Upper\"), (10, \"Medium\"), (0, \"Lower\")]\n",
-    "\n",
-    "for c_threshold, c_name in sorted(categories, key=lambda x: x[0]):\n",
-    "    mask = d[\"number\"] >= c_threshold\n",
-    "    d.loc[mask, \"category\"] = c_name\n",
-    "\n",
-    "d[[\"country_name\", \"country_code\", \"number\", \"category\"]].to_excel(\n",
-    "    \"supporters_extract.xlsx\", index=False\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sorted(categories, key=lambda x: x[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from fontTools.ttLib.woff2 import compress\n",
-    "from pathlib import Path\n",
-    "import re\n",
-    "\n",
-    "font_directory = Path.home() / \"Documents/TSOSI/Graphisme/Mont/Mont\"\n",
-    "otf_files = font_directory.glob(\"*.otf\")\n",
-    "save_directory = Path.home() / \"Documents/TSOSI/Fonts/Mont\"\n",
-    "\n",
-    "for file in otf_files:\n",
-    "    file_path_usefull = re.match(r\".*(Mont[^\\.]+)\", file.name)\n",
-    "    save_path = (\n",
-    "        str(save_directory / file_path_usefull[1]).replace(\" \", \"_\") + \".woff2\"\n",
-    "    )\n",
-    "    compress(str(file), str(save_path))"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": ".venv",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.3"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2
+  "nbformat": 4,
+  "nbformat_minor": 2
 }
