--- a/backend/tsosi/data/preparation/scipost/run.ipynb
+++ b/backend/tsosi/data/preparation/scipost/run.ipynb
@@ -43,10 +43,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "file = \"/home/guillaume-alzieu/Nextcloud/TSOSI_data/scipost/0_raw/2025-03-31_scipost_raw.json\"\n",
+    "df = pd.read_json(file)\n",
+    "mask = (~df[\"payment_date\"].isna()) & (df[\"status\"] != \"paid\")\n",
+    "df[mask]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1 - Pre-process data\n"
+    "### 1 - Pre-process collected data\n"
    ]
   },
   {
@@ -55,11 +69,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pathlib import Path\n",
+    "import sys\n",
+    "import os\n",
+    "import django\n",
+    "from datetime import date\n",
+    "\n",
+    "# Add the parent directory to the system path and setup django\n",
+    "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent.parent.parent)\n",
+    "\n",
+    "if BASE_DIR not in sys.path:\n",
+    "    sys.path.append(BASE_DIR)\n",
+    "\n",
+    "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
+    "\n",
+    "django.setup()\n",
+    "\n",
     "from get_data import pre_process_data\n",
     "from pathlib import Path\n",
     "import pandas as pd\n",
     "\n",
-    "date_str = \"2025-03-05\"\n",
+    "date_str = \"2025-03-31\"\n",
     "raw_file = f\"{date_str}_scipost_raw.json\"\n",
     "raw_folder = Path.home() / \"Nextcloud/TSOSI_data/scipost/0_raw\"\n",
     "raw_path = str(raw_folder / raw_file)\n",
@@ -69,8 +99,74 @@
     "processed_path = str(processed_folder / processed_file)\n",
     "\n",
     "df = pd.read_json(raw_path, orient=\"records\")\n",
+    "\n",
     "data = pre_process_data(df)\n",
-    "data.to_json(processed_path, orient=\"records\", indent=2, index=False)"
+    "data.to_json(processed_path, orient=\"records\", indent=2, index=False)\n",
+    "\n",
+    "processed_file = processed_file.split(\".\")[0] + \".xlsx\"\n",
+    "\n",
+    "data.sort_values([\"emitter_ror_id\", \"emitter\"]).to_excel(\n",
+    "    str(processed_folder / processed_file), sheet_name=\"Transfers\", index=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data check\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "\n",
+    "# Dates\n",
+    "date_cols = [\"date_scheduled\", \"invoice_date\", \"payment_date\"]\n",
+    "for c in date_cols:\n",
+    "    df[c] = pd.to_datetime(df[c])\n",
+    "\n",
+    "subsidies = pd.json_normalize(df[\"subsidy\"]).add_prefix(\"subsidy_\")\n",
+    "df = pd.concat([df.drop(columns=[\"subsidy\"]), subsidies], axis=1)\n",
+    "\n",
+    "# Payments check\n",
+    "check = df.groupby(\"subsidy_url\").agg(\n",
+    "    {\n",
+    "        \"amount\": [\"sum\", \"count\"],\n",
+    "        \"subsidy_amount\": \"first\",\n",
+    "        \"subsidy_amount_publicly_shown\": \"first\",\n",
+    "        \"subsidy_date_from\": \"first\",\n",
+    "        \"subsidy_date_until\": \"first\",\n",
+    "    }\n",
+    ")\n",
+    "check[\"diff\"] = ~check[\"amount\", \"sum\"].eq(check[\"subsidy_amount\", \"first\"])\n",
+    "check[check[\"diff\"] & check[\"subsidy_amount_publicly_shown\", \"first\"]]\n",
+    "\n",
+    "# Payment status description\n",
+    "df[\n",
+    "    (df[\"status\"] == \"scheduled\")\n",
+    "    & (df[\"date_scheduled\"] < pd.to_datetime(date(2025, 3, 1)))\n",
+    "]\n",
+    "\n",
+    "# Invoiced payment check\n",
+    "invoice_date_threshold = pd.to_datetime(datetime.date.today()) - pd.Timedelta(\n",
+    "    days=180\n",
+    ")\n",
+    "df[(df[\"status\"] == \"invoiced\") & (df[\"invoice_date\"] < invoice_date_threshold)]\n",
+    "\n",
+    "\n",
+    "# Missing date value\n",
+    "df[\n",
+    "    (\n",
+    "        df[\"invoice_date\"].isna()\n",
+    "        & df[\"payment_date\"].isna()\n",
+    "        & df[\"status\"].isin([\"paid\", \"invoiced\"])\n",
+    "    )\n",
+    "]"
    ]
   },
   {
@@ -104,12 +200,12 @@
     "\n",
     "from tsosi.data.preparation.scipost.default import get_config\n",
     "\n",
-    "date_data = date(2025, 3, 5)\n",
+    "date_data = date(2025, 3, 31)\n",
     "file_path = (\n",
     "    Path.home()\n",
-    "    / \"Nextcloud/TSOSI_data/scipost/3_enriched/2025-03-05_scipost_enriched.json\"\n",
+    "    / \"Nextcloud/TSOSI_data/scipost/4_processed/2025-03-31_scipost_processed.xlsx\"\n",
     ")\n",
-    "config = get_config(str(file_path), date_data)\n",
+    "config = get_config(str(file_path), \"Transfers\", date_data)\n",
     "config.generate_data_file()"
    ]
   }
